# itunes-xml-insights

./: .env.template  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  analyze_xml.py  create_service_account.sh  docker-compose.yml  kibana_setup.py  main.py  pyproject.toml  setup.sh  setup_kibana_dashboard.sh
scripts/: create_local_elasticsearch_mcp.sh  setup.sh
